Prevent horizontal scrolling

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@ body {
     background-position: center;
     background-attachment: fixed;
     background-repeat: no-repeat;
+    overflow-x: hidden;
 }
 
 /* Aurora Background */
